<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/menu_profile"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/menu_settings"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/menu_premium"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/drawer_premium" />
    </group>
    <item
        android:id="@+id/menu_logout"
        android:checkable="false"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/drawer_logout" />
</menu>
